[gd_scene load_steps=6 format=2]

[ext_resource path="res://Globals/Shortcuts.gd" type="Script" id=1]
[ext_resource path="res://Assets/Placeholders/square.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/BaseFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://HUD/BaseButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Placeholders/frame.png" type="Texture" id=5]

[node name="Shortcuts" type="Node2D" groups=[
"save",
]]
position = Vector2( 1544.21, 0 )
z_index = 1
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 93.0
margin_right = 376.0
margin_bottom = 460.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer"]
modulate = Color( 0.247059, 0.14902, 0.121569, 1 )
margin_right = 283.0
margin_bottom = 460.0
texture = ExtResource( 5 )
region_rect = Rect2( 0, 17, 16, 16 )
patch_margin_left = 8
patch_margin_top = 7
patch_margin_right = 8
patch_margin_bottom = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
margin_right = 283.0
margin_bottom = 460.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/MarginContainer"]
margin_right = 283.0
margin_bottom = 460.0

[node name="Panel" type="Panel" parent="MarginContainer/MarginContainer/CenterContainer"]
visible = false
margin_left = 141.0
margin_top = 230.0
margin_right = 141.0
margin_bottom = 230.0

[node name="Bg" type="Sprite" parent="MarginContainer/MarginContainer/CenterContainer"]
visible = false
modulate = Color( 0, 0, 0, 0.501961 )
position = Vector2( 3.34033, 3.34039 )
scale = Vector2( 5.86251, 9.3881 )
texture = ExtResource( 2 )
offset = Vector2( 32, 32 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/CenterContainer"]
margin_left = 21.0
margin_top = 19.0
margin_right = 261.0
margin_bottom = 440.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 240.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Cheatcodes"
uppercase = true

[node name="ExtraFood" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 36.0
margin_right = 240.0
margin_bottom = 86.1093
text = "More Food"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 240.0
margin_bottom = 110.0
custom_constants/separation = 20

[node name="Label3" type="Label" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 240.0
margin_bottom = 146.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Navigation"
uppercase = true

[node name="LoadBase" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 150.0
margin_right = 240.0
margin_bottom = 200.109
text = "Load Base"

[node name="LoadMap" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 204.0
margin_right = 240.0
margin_bottom = 254.109
text = "Load Map"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 258.0
margin_right = 240.0
margin_bottom = 278.0
custom_constants/separation = 20

[node name="ExitButton" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 282.0
margin_right = 240.0
margin_bottom = 332.109
text = "Exit Game"

[node name="Label4" type="Label" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer"]
visible = false
margin_top = 282.0
margin_right = 336.0
margin_bottom = 314.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Game saving WIP"
uppercase = true

[node name="SavegameSlots" type="HBoxContainer" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer"]
visible = false
margin_top = 318.0
margin_right = 336.0
margin_bottom = 368.0

[node name="Savegame1" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer/SavegameSlots" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 102.262
margin_bottom = 50.1093
text = "Sav1"

[node name="Savegame2" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer/SavegameSlots" instance=ExtResource( 4 )]
margin_left = 106.0
margin_top = 0.0
margin_right = 216.262
margin_bottom = 50.1093
text = "Sav2"

[node name="Savegame3" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer/SavegameSlots" instance=ExtResource( 4 )]
margin_left = 220.0
margin_top = 0.0
margin_right = 330.262
margin_bottom = 50.1093
text = "Sav3"

[node name="SaveButton" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer" instance=ExtResource( 4 )]
visible = false
margin_left = 0.0
margin_top = 372.0
margin_right = 336.0
margin_bottom = 422.109
text = "Save Game"

[node name="LoadButton" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer" instance=ExtResource( 4 )]
visible = false
margin_left = 0.0
margin_top = 426.0
margin_right = 336.0
margin_bottom = 476.109
text = "Load Game"

[node name="EraseButton" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer" instance=ExtResource( 4 )]
visible = false
margin_left = 0.0
margin_top = 480.0
margin_right = 336.0
margin_bottom = 530.109
text = "Erase Game"

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 336.0
margin_right = 240.0
margin_bottom = 367.0
text = "
"

[node name="ToggleShortcuts" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 371.0
margin_right = 240.0
margin_bottom = 421.109
text = "Shortcuts"

[node name="ShortcutsOffset" type="Position2D" parent="MarginContainer/MarginContainer/CenterContainer/VBoxContainer/ToggleShortcuts"]
position = Vector2( 0, -20 )
[connection signal="pressed" from="MarginContainer/MarginContainer/CenterContainer/VBoxContainer/ExtraFood" to="." method="_on_ExtraFood_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/CenterContainer/VBoxContainer/LoadBase" to="." method="_on_LoadBase_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/CenterContainer/VBoxContainer/LoadMap" to="." method="_on_LoadMap_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/CenterContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/CenterContainer/VBoxContainer/ToggleShortcuts" to="." method="_on_ToggleShortcuts_pressed"]
